src/Styles/CountryDetails.css
.country-details-section {
    min-height: 90vh;
    padding: 0 40px;
    background-color: var(--bg-color);
}
.back-btn-container {
    height: 120px;
    background-color: var(--bg-color);
    display: flex;
    justify-content: flex-start;
    align-items: center;
}
.back-btn-container button {
    padding: 12px 24px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 8px;
    color: var(--text-color);
    background-color: var(--nav-bg-color);
    box-shadow: 2px 2px 2px var(--btn-hover), -2px -2px 2px var(--btn-hover), 2px -2px 2px var(--btn-hover), -2px 2px 2px var(--btn-hover);
    border: transparent;
    border-radius: 6px;
    font-size: 16px;
    font-weight: 300;
    letter-spacing: .5px;
    cursor: pointer;
    transition: background-color .3s ease;
}
.back-btn-container button:hover {
    background-color: var(--nav-shadow-color);
}
/* Country Info */
.countryInfoSection {
    padding: 16px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 64px;
    background-color: var(--bg-color);
}
.countryFlag-container {
    width: 430px;
    height: 300px;
    max-width: 430px;
    box-shadow: 4px 4px 4px var(--btn-hover), -4px -4px 4px var(--btn-hover), 4px -4px 4px var(--btn-hover), -4px 4px 4px var(--btn-hover);
}
.countryFlag-container img {
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform .3s ease;
}
.countryFlag-container img:hover {
    transform: scale(1.04);
}
/* Text Information */
.countryStats-container {
    width: 64%;
}
.country-title {
    padding: 16px 0;
    text-align: left;
    font-size: 32px;
    font-weight: 800;
    letter-spacing: .5px;
}
.country-details {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 150px;
}
.country-details p {
    margin: 10px 0;
    color: var(--text-color);
    letter-spacing: .5px;
}
/* Borders */
.country-border {
    padding: 40px 0;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: wrap;
    gap: 16px 0;
    letter-spacing: .5px;
}
.country-border p {
    margin: 8px 10px 8px 0;
}
.country-border a {
    margin: 0 8px 0 0;
    text-decoration: none;
    color: var(--text-color);
}
.country-border-name {
    padding: 6px 10px;
    color: var(--text-color);
    background-color: var(--nav-bg-color);
    box-shadow: 2px 2px 2px var(--btn-hover), -2px -2px 2px var(--btn-hover), 2px -2px 2px var(--btn-hover), -2px 2px 2px var(--btn-hover);
    border: transparent;
    border-radius: 6px;
    font-size: 16px;
    font-weight: 300;
    letter-spacing: .5px;
    cursor: pointer;
    transition: background-color .3s ease;
}
.country-border-name:hover {
    background-color: var(--nav-shadow-color);
}
.no-countries {
    color: red;
    font-size: 18px;
    font-weight: 800;
    letter-spacing: .8px;
}
/* Responsive */
@media screen and (max-width: 1100px) {
    .country-details-section {
        height: auto;
    }
    .countryInfoSection {
        padding: 0;
        flex-direction: column;
        gap: 32px;
    }
    .countryFlag-container {
        width: 450px;
        max-width: 450px;
    }
    .countryStats-container {
        width: 100%;
    }
    .country-details {
        gap: 24%;
    }
}
@media screen and (max-width: 678px) {
    .countryInfoSection {
        padding-bottom: 32px;
    }
    .countryFlag-container {
        width: 360px;
        height: 250px;
        max-width: 360px;
    }
    .country-details-section {
        padding: 0 16px;
    }
    .country-details {
        flex-direction: column;
        gap: 16px;
    }
    .country-border {
        padding: 24px 0;
    }
}
@media screen and (max-width: 400px) {
    .countryFlag-container {
        width: 100%;
        max-width: 100%;
    }
}

